# FranRename

./: .gitignore  FranRename.html  FranRename_Simple.py  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: deploy_to_telegram.py  send_log_to_telegram.py
sidecar/: main.py  ocr-engine.spec
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
