[package]
name = "ocr-renamer"
version = "1.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["devtools"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-opener = "2.2.0"
tauri-plugin-fs = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
name = "ocr_renamer_lib"
path = "src/lib.rs"
# V24.0 Version Harmony 🎯
